--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ main{
     width: 100%;
     height: 250px;
     object-fit: cover;
-    border-radius: 15px 15px 0 0;
 }
 .specialties-card-body {
     padding: 20px;
@@ -188,7 +187,7 @@ main{
     color: #FFA500;
 }
 .submit-btn {
-    background: #d9534f;
+    background-color: #d9534f;
     color: white;
     font-weight: bold;
     border-radius: 5px;
@@ -197,7 +196,7 @@ main{
     transition: 0.3s;
 }
 .submit-btn:hover {
-    background: #c9302c;
+    background-color: #d9534f;
 }
 
 .footer {
